--- a/wolfy.html
+++ b/wolfy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta http-equiv="refresh" content="0; url='https://www.example.com'" />
+  <meta http-equiv="refresh" content="0; url='https://discord.com/invite/rQqWNHPW'" />
   <meta name="description" content="This is a brief description of the page.">
   <meta name="author" content="Author's Name">
   <meta name="robots" content="index, follow">
@@ -9,6 +9,6 @@
   <meta name="keywords" content="keyword1, keyword2, keyword3">
  </head>
  <body>
-  <p>You will be redirected to example.com soon!</p>
+  <p>You will be redirected to discord.com soon!</p>
  </body>
 </html>
