--- a/profiles/lordwlfy.html
+++ b/profiles/lordwlfy.html
@@ -5,10 +5,19 @@
 </head>
 <body>
  <div class="profile-card">
-     <div class="profile-banner" style="background-image: url('banner.jpg')"></div>
-     <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-     <h2 class="username">John Doe</h2>
-     <p class="description">Software Developer</p>
+    <div class="profile-banner" style="background-image: url('banner.jpg')"></div>
+    <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+    <h2 class="username">John Doe</h2>
+    <p class="description">Software Developer</p>
+    <a href="https://www.google.com" target="_blank">
+    <i class="fab fa-google"></i> Google
+    </a>
+    <a href="https://www.facebook.com" target="_blank">
+    <i class="fab fa-facebook-square"></i> Facebook
+    </a> 
+    <a href="https://www.twitter.com" target="_blank">
+    <i class="fab fa-twitter-square"></i> Twitter
+    </a>
  </div>
 </body>
 </html>
