--- a/profiles/lordwlfy.html
+++ b/profiles/lordwlfy.html
@@ -3,25 +3,26 @@
 <head>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <link rel="stylesheet" href="style.css">
+ <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+ <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
+
+
 </head>
 <body>
 <div class="profile-card">
-   <div class="profile-banner" style="background-image: url('banner.jpg')"></div>
-   <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-   <h2 class="username">John Doe</h2>
-   <p class="description">Software Developer</p>
-<div class="profile-links">
-  <a href="https://www.google.com" target="_blank">
-      <i class="fab fa-google"></i> Google
-  </a>
-  <a href="https://www.facebook.com" target="_blank">
-      <i class="fab fa-facebook-square"></i> Facebook
-  </a>
-  <a href="https://www.twitter.com" target="_blank">
-      <i class="fab fa-twitter-square"></i> Twitter
-  </a>
+   <div class="profile-banner" style="background-image: url('https://cdn.discordapp.com/banners/1163168310607753418/a_211eee267f177760edb86b47fd6d3e38.gif?size=512')"></div>
+   <img src="https://cdn.discordapp.com/avatars/1163168310607753418/6593c50f7932c0cdb70c893c52321819.png?size=1024" alt="Profile Picture" class="profile-pic">
+   <h2 class="username">lordwlfy</h2>
+   <p class="description">Discord Bot Developer</p>
+ 
 </div>
-</div>
+     
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-b796"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+
+          <!-- ADD NECESSARY DETAILS YOU CAN ADD MORE CHANGE THIS DEPENDING ON YOUR SITUATION-->
+        <p class="u-custom-font u-font-montserrat u-small-text u-text u-text-variant u-text-1">Redirect.portals Bio Page<br> © lordwlfy 2023<br>
+        </p>
+      </div></footer>
 
 </body>
 </html>
