--- a/profiles/lordwlfy.html
+++ b/profiles/lordwlfy.html
@@ -15,15 +15,9 @@
    <img src="https://cdn.discordapp.com/avatars/1163168310607753418/6593c50f7932c0cdb70c893c52321819.png?size=1024" alt="Profile Picture" class="profile-pic">
    <h2 class="username">lordwlfy</h2>
    <p class="description">Discord Bot Developer</p>
- 
 </div>
-     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-b796"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-
-          <!-- ADD NECESSARY DETAILS YOU CAN ADD MORE CHANGE THIS DEPENDING ON YOUR SITUATION-->
-        <p class="u-custom-font u-font-montserrat u-small-text u-text u-text-variant u-text-1">Redirect.portals Bio Page<br> © lordwlfy 2023<br>
-        </p>
-      </div></footer>
-
+<footer>
+ <p>&copy; 2023 Your Name or Company Name. All rights reserved.</p>
+</footer>
 </body>
 </html>
