--- a/profiles/lordwlfy.html
+++ b/profiles/lordwlfy.html
@@ -13,8 +13,9 @@
 <div class="profile-card">
    <div class="profile-banner" style="background-image: url('https://cdn.discordapp.com/banners/1163168310607753418/a_211eee267f177760edb86b47fd6d3e38.gif?size=512')"></div>
    <img src="https://cdn.discordapp.com/avatars/1163168310607753418/6593c50f7932c0cdb70c893c52321819.png?size=1024" alt="Profile Picture" class="profile-pic">
-   <h2 class="username">lordwlfy</h2>
+   <h2 class="username">&zwnj;&zwnj;&zwnj;lordwlfy</h2>
    <p class="description">Discord Bot Developer</p>
+   
 </div>
 </body>
 </html>
