--- a/profiles/xyz.html
+++ b/profiles/xyz.html
@@ -31,7 +31,9 @@
       <div id="banner" style="background-image: url('https://cdn.discordapp.com/banners/1163168310607753418/a_211eee267f177760edb86b47fd6d3e38.gif?size=512');"></div> 
       <div id="user-info">
         <div id="avatar">
-          <img src="https://cdn.discordapp.com/avatars/1163168310607753418/6593c50f7932c0cdb70c893c52321819.png?size=1024" alt="lordwlfy's Avatar">
+          <img
+            src="https://cdn.discordapp.com/avatars/1163168310607753418/6593c50f7932c0cdb70c893c52321819.png?size=1024"
+            alt="lordwlfy's Avatar">
           <div id="status"></div>
         </div>
 
