--- a/profiles/lordwlfy.html
+++ b/profiles/lordwlfy.html
@@ -42,7 +42,7 @@
 
         <!--===== NAME =====-->
 
-        <div id="username">lordwlfy<span></span></div>
+        <div id="username">lordwlfy<span>lordwlfy</span></div>
       </div>
       <hr/>
 
