--- a/profiles/lordwlfy.html
+++ b/profiles/lordwlfy.html
@@ -72,7 +72,7 @@
   <script src="https://unpkg.com/tippy.js@6"></script>
 
   <script src="assets/js/socket.js"></script>
-  <script src="assets/js/config.js"></script>
+  <script src="assets/js/configs/wolfy.js"></script>
   <script src="assets/js/index.js"></script>
 </body>
 
