--- a/profiles/rizz.html
+++ b/profiles/rizz.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Redirect.portal - LordWlfy`s Bio</title>
-  <meta property="og:description" content="Get a free bio page with redirect.portal (message lordwlfy for one)" />
+  <meta name="author" content="redirect.portal - rizz.js`s bio">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redirect.portal - rizz.ejs`s Bio</title>
+  <meta property="og:description" content="life is like a dick, it keeps hanging til a girl makes it hard" />
   <link rel="icon" href="assets/images/PUT YOUR ICON HERE" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
