--- a/profiles/rizz.html
+++ b/profiles/rizz.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="author" content="redirect.portal - rizz.js`s bio">
+  <meta property="og:author" content="redirect.portal - rizz.js`s bio">
   <meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Redirect.portal - rizz.ejs`s Bio</title>
   <meta property="og:description" content="life is like a dick, it keeps hanging til a girl makes it hard" />
